--- a/styles2.css
+++ b/styles2.css
@@ -35,7 +35,6 @@
 .botonppal {
   display: none;
 }
-
 .section-container_baner {
   width: 100%;
   margin-top: 70px;
@@ -90,15 +89,96 @@
   display: none;
 }
 .logosimg {
+  padding-top: 60px;
   display: grid;
+  justify-items: center;
   grid-template-columns: repeat(2, 1fr);
   gap: 16px;
-  justify-items: center;
 }
 .sponsors-logo {
   width: 140px;
 }
 
+.unified-section_2 {
+  width: 100%;
+  margin-top: 60px;
+  background-color: #f7f9fc;
+}
+.section-container {
+  width: 100%;
+  padding: 0px 16px;
+}
+.unified-paragraph {
+  margin: 30px 0;
+  color: #6962f7;
+}
+.payment-products_title {
+  width: 100%;
+  font-weight: bold;
+  font-size: 26px;
+  letter-spacing: 1px;
+  line-height: 43px;
+  margin-bottom: 45px;
+}
+.one-paragraph,
+.two-paragraph {
+  width: 100%;
+  margin: 16px 0 35px;
+  line-height: 25px;
+}
+.purple-font {
+  text-decoration: none;
+  color: #6962f7;
+  cursor: pointer;
+}
+.button-start_now {
+  margin: 16px 0;
+  padding: 7px 14px;
+  display: flex;
+  font-size: 15px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  background-color: #6962f7;
+}
+.images {
+  width: 100%;
+  display: flex;
+  padding: 50px 16px 0px;
+  gap: 0 25px;
+  background-color: #f7f9fc;
+}
+.card-phone {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  gap: 35px;
+}
+.credit-card {
+  width: 75px;
+  border-radius: 20px;
+}
+.phone {
+  width: 75px;
+}
+.invoice-dash {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.invoice {
+  width: 182px;
+  margin-bottom: 30px;
+  border-radius: 20px;
+}
+.dash {
+  width: 182px;
+  border-radius: 20px;
+}
 @media (min-width: 550px) {
   .menu {
     padding: 10px 40px 0px 0px;
@@ -111,15 +191,45 @@
   .logosimg {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 16px;
+    gap: 0;
     justify-content: center;
   }
   .sponsors-logo {
     width: 140px;
   }
+  .card-phone {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 40%;
+    gap: 15px;
+  }
+  .invoice-dash {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .credit-card {
+    width: 141px;
+    border-radius: 40px;
+  }
+  .phone {
+    width: 141px;
+  }
+  .invoice {
+    width: 310px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+  }
+  .dash {
+    width: 310px;
+    border-radius: 20px;
+  }
 }
-/* TABLE SCREEN */
-@media (min-width: 769px) {
+/* TABLET */
+@media (min-width: 768px) {
   .background-header {
     background: linear-gradient(40deg, #ef008f, #ffba27, #6ec3f4, #7038ff);
     width: 100%;
@@ -182,7 +292,42 @@
     padding: 10px;
     text-decoration: none;
   }
+  .payment-products_title {
+    width: 50%;
+    font-weight: bold;
+    font-size: 33px;
+    letter-spacing: 1px;
+    line-height: 43px;
+    margin-bottom: 45px;
+  }
+  .two-column {
+    width: 100%;
+    display: flex;
+    gap: 50px;
+  }
+  .col-left,
+  .col-right {
+    width: 49%;
+  }
+  .credit-card {
+    width: 220px;
+    margin-bottom: 15px;
+    border-radius: 40px;
+  }
+  .phone {
+    width: 220px;
+  }
+  .invoice {
+    width: 440px;
+    margin-bottom: 35px;
+    border-radius: 20px;
+  }
+  .dash {
+    width: 440px;
+    border-radius: 20px;
+  }
 }
+
 /* DESKTOP SCREEN */
 @media (min-width: 1024px) {
   .background-header {
@@ -200,6 +345,7 @@
     transform-origin: 0;
     z-index: -1;
   }
+
   .letter {
     color: white;
     font-weight: bold;
@@ -253,6 +399,119 @@
   }
   .sponsors-logo {
     width: 200px;
+  }
+  .payment-products_title {
+    width: 50%;
+    font-weight: bold;
+    font-size: 33px;
+    letter-spacing: 1px;
+    line-height: 43px;
+    margin-bottom: 45px;
+  }
+  .two-column {
+    width: 100%;
+    display: flex;
+    gap: 50px;
+  }
+  .col-left,
+  .col-right {
+    width: 49%;
+  }
+  .purple-font {
+    text-decoration: none;
+    color: #6962f7;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .purple-font:hover {
+    color: rgb(68, 92, 112);
+  }
+  .button-start_now {
+    cursor: pointer;
+  }
+  .button-start_now:hover {
+    background: rgb(68, 92, 112);
+  }
+  .button-start_now:hover > .arrow-two {
+    transform: translate(7px);
+    transition: transform 0.25s ease;
+  }
+
+  .card-phone {
+    width: 38%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+  }
+  .invoice-dash {
+    width: 100%;
+    height: 130vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 30px;
+  }
+  .credit-card {
+    width: 340px;
+    margin-bottom: 15px;
+    border-radius: 20px;
+  }
+  .phone {
+    width: 340px;
+    height: 90vh;
+  }
+  .invoice {
+    width: 100%;
+    height: 50%;
+
+    margin-bottom: 35px;
+    border-radius: 20px;
+  }
+  .dash {
+    width: 100%;
+    height: 50%;
+    border-radius: 20px;
+  }
+  .images {
+    width: 100%;
+    height: 145vh;
+    display: flex;
+    padding: 50px 16px 0px;
+    gap: 0;
+    background-color: #f7f9fc;
+  }
+}
+/* PANTALLAS MAS GRANDES */
+@media (min-width: 1450px) {
+  .background-header {
+    width: 100%;
+    height: 474px; /* Ajusta la altura según tus necesidades */
+    background: linear-gradient(40deg, #ef008f, #ffba27, #6ec3f4, #7038ff);
+    position: absolute;
+    background-size: 150% 150%;
+    background-repeat: no-repeat;
+    animation-name: mybackground;
+    animation-duration: 13s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    transform: skewY(-8deg); /*Inclina el contenedor*/
+    transform-origin: 0;
+    z-index: -1;
+  }
+  .purple-font {
+    text-decoration: none;
+    color: #6962f7;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  .purple-font:hover {
+    color: rgb(68, 92, 112);
+  }
+  .general-container,
+  .unified-section_2 {
+    max-width: 1450px;
+    margin: 0 auto;
   }
 }
 /* ANIMATION BACKGROUND */
