--- a/styles2.css
+++ b/styles2.css
@@ -179,6 +179,75 @@
   width: 182px;
   border-radius: 20px;
 }
+.designed-for_engineers_3 {
+  width: 100%;
+}
+.background-blue {
+  max-width: 100%;
+  max-height: 100%;
+  background-color: #0A2540;
+  transform: skewY(-9deg) translateY(-5px);
+  z-index: -1;
+}
+.designed {
+  height: 100%;
+  transform: skewY(9deg);
+  padding: 70px 16px 0px;
+}
+.subtitle2 {
+  color: #00D4FF;
+  font-weight: bold;
+  margin: 16px 0;
+}
+.worlds-title {
+  max-width: 100%;
+  font-size: 27px;
+  line-height: 50px;
+  color: #fff;
+}
+.abstract-paragraph {
+  color: #fff;
+  line-height: 24px;
+  margin: 16px 0 25px;
+}
+.start-now3 {
+  margin: 20px 0;
+  padding: 8px 14px;
+  display: flex;
+  font-size: 15px;
+  font-weight: bold;
+  color: #0A2540;
+  border: none;
+  border-radius: 20px;
+  background-color: #00D4FF;
+}
+.tools-custom {
+  width: 50px;
+  margin: 8px 0;
+  margin: 10px 0 3px;
+}
+.title-3 {
+  font-size: 16px;
+  color: #fff;
+}
+.secondary-text {
+  font-size: 14px;
+  color: #ADBDCC;
+  margin: 16px 0px;
+}
+.buttons-3 {
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  color: #00D4FF;
+  background-color: transparent;
+  border: none;
+}
+.img-code_terminal {
+  display: none;
+}
 @media (min-width: 550px) {
   .menu {
     padding: 10px 40px 0px 0px;
@@ -226,6 +295,20 @@
   .dash {
     width: 310px;
     border-radius: 20px;
+  }
+  .designed {
+    display: flex;
+    padding-top: 180px;
+  }
+  .img-code_terminal {
+    display: flex;
+    flex-direction: column;
+    width: 260px;
+    border-radius: 10px;
+  }
+  .section-container_designed,
+  .img-container_designed {
+    width: 50%;
   }
 }
 /* TABLET */
@@ -325,6 +408,40 @@
   .dash {
     width: 440px;
     border-radius: 20px;
+  }
+  .background-blue {
+    height: 800px;
+  }
+  .designed {
+    gap: 10px;
+  }
+  .two-columns_toolsCustom {
+    display: flex;
+    gap: 10px;
+  }
+  .section-container_designed,
+  .img-container_designed {
+    width: 50%;
+  }
+  .img-code_terminal {
+    width: 95%;
+    margin-bottom: 20px;
+    border-radius: 20px;
+  }
+  .images-container_designed {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+  .title-3 {
+    font-size: 15px;
+  }
+  .secondary-text {
+    font-size: 12px;
+  }
+  .buttons-3 {
+    font-size: 14px;
   }
 }
 
@@ -481,6 +598,22 @@
     gap: 0;
     background-color: #f7f9fc;
   }
+  .background-blue {
+    height: 1050px;
+    transform: skewY(-10deg) translateY(-65px);
+  }
+  .section-container_designed,
+  .images-container_designed {
+    padding-top: 230px;
+  }
+  .images-container_designed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .img-code_terminal {
+    width: 85%;
+  }
 }
 /* PANTALLAS MAS GRANDES */
 @media (min-width: 1450px) {
@@ -509,9 +642,20 @@
     color: rgb(68, 92, 112);
   }
   .general-container,
-  .unified-section_2 {
+  .unified-section_2,.designed {
     max-width: 1450px;
     margin: 0 auto;
+  }
+  .background-blue {
+    transform: skewY(-10deg) translateY(-10px);
+    height: 1150px;
+  }
+  .section-container_designed,
+  .images-container_designed {
+    padding-top: 200px;
+  }
+  .img-code_terminal {
+    width: 550px;
   }
 }
 /* ANIMATION BACKGROUND */
