--- a/styles2.css
+++ b/styles2.css
@@ -144,6 +144,7 @@
 }
 .images {
   width: 100%;
+  height: 100%;
   display: flex;
   padding: 50px 16px 0px;
   gap: 0 25px;
@@ -158,11 +159,11 @@
   gap: 35px;
 }
 .credit-card {
-  width: 75px;
+  width: 100%;
   border-radius: 20px;
 }
 .phone {
-  width: 75px;
+  width: 100%;
 }
 .invoice-dash {
   width: 70%;
@@ -171,12 +172,14 @@
   align-items: center;
 }
 .invoice {
-  width: 182px;
+  width: 100%;
+  height:100%;
   margin-bottom: 30px;
   border-radius: 20px;
 }
 .dash {
-  width: 182px;
+  width: 100%;
+  height:100%;
   border-radius: 20px;
 }
 .designed-for_engineers_3 {
@@ -254,7 +257,7 @@
   }
   .img-hero {
     display: flex;
-    width: 400px;
+    width: auto;
     height: 350px;
   }
   .logosimg {
@@ -281,19 +284,19 @@
     align-items: flex-start;
   }
   .credit-card {
-    width: 141px;
+    width: 100%;
     border-radius: 40px;
   }
   .phone {
-    width: 141px;
+    width: 100%;
   }
   .invoice {
-    width: 310px;
+    width: 100%;
     margin-bottom: 30px;
     border-radius: 20px;
   }
   .dash {
-    width: 310px;
+    width: 100%;
     border-radius: 20px;
   }
   .designed {
@@ -333,7 +336,7 @@
   }
   .img-hero {
     display: flex;
-    width: 450px;
+    width: auto;
     height: 400px;
   }
   .logosimg {
@@ -393,20 +396,20 @@
     width: 49%;
   }
   .credit-card {
-    width: 220px;
+    width: 100%;
     margin-bottom: 15px;
     border-radius: 40px;
   }
   .phone {
-    width: 220px;
+    width: 100%;
   }
   .invoice {
-    width: 440px;
+    width: 100%;
     margin-bottom: 35px;
     border-radius: 20px;
   }
   .dash {
-    width: 440px;
+    width: 100%;
     border-radius: 20px;
   }
   .background-blue {
@@ -429,7 +432,7 @@
     border-radius: 20px;
   }
   .images-container_designed {
-    width: 50%;
+    width: auto;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -503,8 +506,7 @@
     opacity: 0.8;
   }
   .img-hero {
-    display: flex;
-    width: 650px;
+    width: auto;
     height: 600px;
   }
   .logosimg {
@@ -559,40 +561,35 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    flex:0 0 auto;
     gap: 15px;
   }
   .invoice-dash {
     width: 100%;
-    height: 130vh;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-left: 30px;
   }
   .credit-card {
-    width: 340px;
+    width: 100%;
     margin-bottom: 15px;
     border-radius: 20px;
   }
   .phone {
-    width: 340px;
-    height: 90vh;
+    width: 100%;
   }
   .invoice {
     width: 100%;
-    height: 50%;
-
     margin-bottom: 35px;
     border-radius: 20px;
   }
   .dash {
     width: 100%;
-    height: 50%;
     border-radius: 20px;
   }
   .images {
     width: 100%;
-    height: 145vh;
     display: flex;
     padding: 50px 16px 0px;
     gap: 0;
@@ -600,11 +597,11 @@
   }
   .background-blue {
     height: 1050px;
-    transform: skewY(-10deg) translateY(-65px);
+    transform: skewY(-10deg) translateY(-20px);
   }
   .section-container_designed,
   .images-container_designed {
-    padding-top: 230px;
+    padding-top: 20px;
   }
   .images-container_designed {
     display: flex;
@@ -613,10 +610,11 @@
   }
   .img-code_terminal {
     width: 85%;
+    
   }
 }
 /* PANTALLAS MAS GRANDES */
-@media (min-width: 1450px) {
+@media (min-width: 1365px) {
   .background-header {
     width: 100%;
     height: 474px; /* Ajusta la altura según tus necesidades */
@@ -645,18 +643,21 @@
   .unified-section_2,.designed {
     max-width: 1450px;
     margin: 0 auto;
+    
   }
   .background-blue {
     transform: skewY(-10deg) translateY(-10px);
     height: 1150px;
   }
-  .section-container_designed,
-  .images-container_designed {
-    padding-top: 200px;
+  .images-container_designed{
+    display:flex;
+    max-width:100%;
+    height: 50%;
+
   }
-  .img-code_terminal {
-    width: 550px;
-  }
+  /* .img-code_terminal {
+    width: 100%;
+  } */
 }
 /* ANIMATION BACKGROUND */
 @keyframes mybackground {
