Se realiza ajuste de background para la segunda seccion ya que en pantallas mas grandes no se extedia como debia

--- a/styles2.css
+++ b/styles2.css
@@ -98,11 +98,13 @@
 .sponsors-logo {
   width: 140px;
 }
-
+.background-section_2{
+  background-color: #f7f9fc;
+  height:2400px;
+}
 .unified-section_2 {
   width: 100%;
   margin-top: 60px;
-  background-color: #f7f9fc;
 }
 .section-container {
   width: 100%;
