--- a/styles2.css
+++ b/styles2.css
@@ -98,9 +98,8 @@
 .sponsors-logo {
   width: 140px;
 }
-.background-section_2{
+.background-section_2 {
   background-color: #f7f9fc;
-  /* height:2400px; */
 }
 .unified-section_2 {
   width: 100%;
@@ -112,6 +111,7 @@
 }
 .unified-paragraph {
   margin: 30px 0;
+  padding-top: 40px;
   color: #6962f7;
 }
 .payment-products_title {
@@ -175,26 +175,26 @@
 }
 .invoice {
   width: 100%;
-  height:100%;
+  height: 100%;
   margin-bottom: 30px;
   border-radius: 20px;
 }
 .dash {
   width: 100%;
-  height:100%;
+  height: 100%;
   border-radius: 20px;
 }
-.background-2_3{
+.background-2_3 {
   background-color: #f7f9fc;
-  max-height:210px;
+  max-height: 210px;
 }
 .designed-for_engineers_3 {
   width: 100%;
 }
 .background-blue {
   max-width: 100%;
-  max-height: 100%;
-  background-color: #0A2540;
+  height: 100%;
+  background-color: #0a2540;
   transform: skewY(-9deg) translateY(-5px);
   z-index: -1;
 }
@@ -202,10 +202,9 @@
   height: 100%;
   transform: skewY(9deg);
   padding: 70px 16px 0px;
-
 }
 .subtitle2 {
-  color: #00D4FF;
+  color: #00d4ff;
   font-weight: bold;
   margin: 16px 0;
 }
@@ -226,10 +225,10 @@
   display: flex;
   font-size: 15px;
   font-weight: bold;
-  color: #0A2540;
+  color: #0a2540;
   border: none;
   border-radius: 20px;
-  background-color: #00D4FF;
+  background-color: #00d4ff;
 }
 .tools-custom {
   width: 50px;
@@ -242,7 +241,7 @@
 }
 .secondary-text {
   font-size: 14px;
-  color: #ADBDCC;
+  color: #adbdcc;
   margin: 16px 0px;
 }
 .buttons-3 {
@@ -251,13 +250,14 @@
   font-size: 15px;
   font-weight: bold;
   letter-spacing: 1px;
-  color: #00D4FF;
+  color: #00d4ff;
   background-color: transparent;
   border: none;
 }
 .img-code_terminal {
   display: none;
 }
+
 @media (min-width: 550px) {
   .menu {
     padding: 10px 40px 0px 0px;
@@ -420,7 +420,7 @@
     border-radius: 20px;
   }
   .background-blue {
-    height: 800px;
+    height: 1000px;
   }
   .designed {
     gap: 10px;
@@ -439,7 +439,7 @@
     border-radius: 20px;
   }
   .images-container_designed {
-    width: auto;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -568,7 +568,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    flex:0 0 auto;
+    flex: 0 0 auto;
     gap: 15px;
   }
   .invoice-dash {
@@ -608,7 +608,24 @@
   }
   .section-container_designed,
   .images-container_designed {
-    padding-top: 20px;
+    padding: 200px 15px;
+  }
+  .start-now3:hover {
+    cursor: pointer;
+    background: white;
+  }
+  .start-now3:hover > .arrow-three {
+    transform: translate(7px);
+    transition: transform 0.25s ease;
+  }
+  .buttons-3:hover {
+    cursor: pointer;
+    color: #00d4ff;
+    opacity: 0.7;
+  }
+  .animation-btn3:hover > .arrow-four {
+    transform: translate(7px);
+    transition: transform 0.25s ease;
   }
   .images-container_designed {
     display: flex;
@@ -616,8 +633,15 @@
     align-items: center;
   }
   .img-code_terminal {
-    width: 85%;
-    
+    width: 100%;
+    height: 45%;
+  }
+  .general-container,
+  .unified-section_2,
+  .designed {
+    max-width: 1450px;
+    margin: 0 auto;
+    padding: 0 15px;
   }
 }
 /* PANTALLAS MAS GRANDES */
@@ -646,25 +670,24 @@
   .purple-font:hover {
     color: rgb(68, 92, 112);
   }
-  .general-container,
-  .unified-section_2,.designed {
-    max-width: 1450px;
-    margin: 0 auto;
-    
-  }
+
   .background-blue {
     transform: skewY(-10deg) translateY(-10px);
     height: 1150px;
   }
-  .images-container_designed{
-    display:flex;
-    max-width:100%;
+  .images-container_designed {
+    display: flex;
+    max-width: 100%;
     height: 50%;
-
   }
-  /* .img-code_terminal {
-    width: 100%;
-  } */
+  .section-container_designed,
+  .images-container_designed {
+    padding: 270px 15px 200px;
+  }
+  .img-code_terminal {
+    max-width: 100%;
+    height: 250px;
+  }
 }
 /* ANIMATION BACKGROUND */
 @keyframes mybackground {
