--- a/styles2.css
+++ b/styles2.css
@@ -613,6 +613,12 @@
   .images-container_designed {
     padding: 200px 15px;
   }
+  .worlds-title{
+    font-size: 30px;
+  }
+  .start-now3{
+    margin: 60px 0 45px;
+  }
   .start-now3:hover {
     cursor: pointer;
     background: white;
@@ -636,13 +642,12 @@
     align-items: center;
   }
   .img-code_terminal {
-    width: 100%;
-    height: 45%;
+    height: 50%;
   }
   .general-container,
   .unified-section_2,
   .designed {
-    max-width: 1450px;
+    max-width: 1380px;
     margin: 0 auto;
     padding: 0 15px;
   }
@@ -687,9 +692,12 @@
   .images-container_designed {
     padding: 270px 15px 200px;
   }
+  .start-now3{
+    margin: 60px 0 45px;
+  }
   .img-code_terminal {
-    max-width: 100%;
-    height: 250px;
+   
+    height: 300px;
   }
 }
 /* ANIMATION BACKGROUND */
