--- a/styles2.css
+++ b/styles2.css
@@ -4,8 +4,8 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body{
-  height:10000px;
+body {
+  height: 10000px;
 }
 /* SECCIÓN 1 */
 /* MOBILE SCREEN */
@@ -260,34 +260,33 @@ body{
 .img-code_terminal {
   display: none;
 }
-.section-container_whyswipe{
-  border: 1px solid rgb(241, 7, 202);
+.section-container_whyswipe {
   padding: 0 16px;
+  margin-top: 750px;
 }
-.subtitle3{
-   color: #6962f7;
-   font-weight:bold;
-   font-size: 17px;
-   margin-bottom:25px;
+.subtitle3 {
+  color: #6962f7;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 25px;
 }
-.tech-first{
-  font-size: 34px;
+.tech-first {
+  font-size: 28px;
   line-height: 60px;
   margin-bottom: 70px;
 }
 
-.img-section_4{
-  height:35px;
-  margin:10px 0px 5px;
+.img-section_4 {
+  height: 35px;
+  margin: 10px 0px 5px;
 }
 
-.paragraph-text{
-  font-size:15px;
+.paragraph-text {
+  font-size: 15px;
   margin: 30px 0;
 }
 
-
-@media only screen and (min-width: 551px) {
+@media (min-width: 550px) {
   .menu {
     padding: 10px 40px 0px 0px;
   }
@@ -349,20 +348,24 @@ body{
   .img-container_designed {
     width: 50%;
   }
-}
-.section-container_whyswipe{
-  margin-top: 850px;
-  padding: 400px 16px 0px;
-}
-
-.container-paragraphs_4{
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  border: 1px solid green; 
-}
-
-.paragraph-text{
-  font-size: 10px;
+  .section-container_whyswipe {
+    margin-top: 700px;
+    padding: 400px 16px 0px;
+  }
+  .tech-first {
+    font-size: 28px;
+  }
+  .img-section_4 {
+    height: 50px;
+  }
+  .paragraph-text {
+    font-size: 15px;
+  }
+  .container-general_4 {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 10px;
+  }
 }
 
 /* TABLET */
@@ -496,6 +499,13 @@ body{
   }
   .buttons-3 {
     font-size: 14px;
+  }
+  .section-container_whyswipe {
+    margin-top: 580px;
+  }
+  .container-general_4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -650,7 +660,7 @@ body{
     height: 1050px;
     transform: skewY(-10deg) translateY(-20px);
   }
-  .designed{
+  .designed {
     transform: skewY(10deg);
   }
   .section-container_designed,
@@ -683,9 +693,11 @@ body{
     width: 100%;
     height: 45%;
   }
+
   .general-container,
   .unified-section_2,
-  .designed {
+  .designed,
+  .why-swipe {
     max-width: 1450px;
     margin: 0 auto;
     padding: 0 15px;
@@ -734,6 +746,9 @@ body{
   .img-code_terminal {
     max-width: 100%;
     height: 250px;
+  }
+  .section-container_whyswipe {
+    margin-top: 750px;
   }
 }
 /* ANIMATION BACKGROUND */
