--- a/styles2.css
+++ b/styles2.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+body {
+  height: 10000px;
+}
 /* SECCIÓN 1 */
 /* MOBILE SCREEN */
 .background-header {
@@ -257,6 +260,31 @@
 .img-code_terminal {
   display: none;
 }
+.section-container_whyswipe {
+  padding: 0 16px;
+  margin-top: 750px;
+}
+.subtitle3 {
+  color: #6962f7;
+  font-weight: bold;
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+.tech-first {
+  font-size: 28px;
+  line-height: 60px;
+  margin-bottom: 70px;
+}
+
+.img-section_4 {
+  height: 35px;
+  margin: 10px 0px 5px;
+}
+
+.paragraph-text {
+  font-size: 15px;
+  margin: 30px 0;
+}
 
 @media (min-width: 550px) {
   .menu {
@@ -319,7 +347,26 @@
   .img-container_designed {
     width: 50%;
   }
+  .section-container_whyswipe {
+    margin-top: 700px;
+    padding: 400px 16px 0px;
+  }
+  .tech-first {
+    font-size: 28px;
+  }
+  .img-section_4 {
+    height: 50px;
+  }
+  .paragraph-text {
+    font-size: 15px;
+  }
+  .container-general_4 {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 10px;
+  }
 }
+
 /* TABLET */
 @media (min-width: 768px) {
   .background-header {
@@ -444,6 +491,13 @@
   }
   .buttons-3 {
     font-size: 14px;
+  }
+  .section-container_whyswipe {
+    margin-top: 580px;
+  }
+  .container-general_4 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
@@ -617,6 +671,52 @@
   .unified-section_2,
   .designed {
     max-width: 1380px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .background-blue {
+    height: 1050px;
+    transform: skewY(-10deg) translateY(-20px);
+  }
+  .designed {
+    transform: skewY(10deg);
+  }
+  .section-container_designed,
+  .images-container_designed {
+    padding: 200px 15px;
+  }
+  .start-now3:hover {
+    cursor: pointer;
+    background: white;
+  }
+  .start-now3:hover > .arrow-three {
+    transform: translate(7px);
+    transition: transform 0.25s ease;
+  }
+  .buttons-3:hover {
+    cursor: pointer;
+    color: #00d4ff;
+    opacity: 0.7;
+  }
+  .animation-btn3:hover > .arrow-four {
+    transform: translate(7px);
+    transition: transform 0.25s ease;
+  }
+  .images-container_designed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .img-code_terminal {
+    width: 100%;
+    height: 45%;
+  }
+
+  .general-container,
+  .unified-section_2,
+  .designed,
+  .why-swipe {
+    max-width: 1450px;
     margin: 0 auto;
     padding: 0 15px;
   }
