--- a/styles2.css
+++ b/styles2.css
@@ -285,8 +285,131 @@ body {
   font-size: 15px;
   margin: 30px 0;
 }
+/* SECTION 5 */
+.global-scale {
+  height:1050px;
+}
+.background-5 {
+  height: 250px;
+  background-color: #0a2540;
+  transform: skewY(-9deg) translateY(-5px);
+  position: relative;
+  z-index: -1;
+}
+.background-5_2 {
+  max-width: 100%;
+  height: 990px;
+  background-color: #0a2540;
+  transform: translateY(-190px);
+  z-index: -1;
+  /* position: relative; */
+  overflow-x: hidden;
+}
+.container-one_section5 {
+  padding: 0 16px;
+}
+.glo-scale {
+  font-size: 17px;
+  color: #00d4ff;
+
+}
+.title-a_structure {
+  font-size: 28px;
+  font-weight: bold;
+  color: white;
+  margin: 25px 0;
+  line-height: 50px;
+}
+.swipe-makes {
+  color: white;
+  line-height: 29px;
+}
+.startups {
+  color: #00d4ff;
+  text-decoration: none;
+}
+.img-global {
+  width: 970px;
+  position: absolute;
+  z-index: -1;
+  transform: translateY(-380px);
+  opacity: 10%;
+}
+.container-two_card {
+  padding: 15px 16px 0px;
+}
+.number,
+.paragraph-card {
+  color: white;
+}
+.number {
+  border-left: 2px solid #00d4ff;
+  margin: 37px 0;
+  padding-left: 15px;
+}
+/* SECTION 06 */
+.container-general_6{
+  padding:0 16px;
+}
+.paragraph-virtual{
+  color:#6962f7;
+  margin:30px 0px 0px;
+}
+.sub-title_check,.sub-title_6{
+  font-size: 30px;
+  line-height: 45px;
+  margin: 25px 0;
+}
+.swipe-text{
+  text-decoration: none;
+  color:#6962f7;
+}
+.img-sessions{
+  width: 280px;
+  display: block;
+  margin: 0 auto;
+  border-radius:15px;
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.3); 
+}
+.paragraph-swipe_06,.paragraph-explore{
+  line-height: 26px;
+}
+.button-06{
+  margin: 20px 0;
+  padding: 7px 14px;
+  display: flex;
+  font-size: 15px;
+  font-weight: bold;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  background-color: #6962f7;
+ 
+}
+.icon_06{
+  width: 50px;
+  margin-top:35px;
+}
+.subtitle_06{
+  margin: 5px 0;
+}
+.paragraph-integrated_get{
+  margin: 25px 0px;
+  color: #ADBDCC;
+}
+.button-06_pricing_api {
+display: flex;
+align-items: center;
+font-size: 15px;
+font-weight: bold;
+letter-spacing: 1px;
+color: #7000ff;
+background-color: transparent;
+border: none;
+}
 
 @media (min-width: 550px) {
+
   .menu {
     padding: 10px 40px 0px 0px;
   }
@@ -365,6 +488,26 @@ body {
     grid-template-columns: repeat(2, 2fr);
     gap: 10px;
   }
+  .background-5{
+    height:200px;
+    position:relative;
+    z-index:-50;
+  }
+  .background-5_2 {
+    transform: translateY(-160px);
+    height:840px;
+    z-index: -1;
+  }
+  .container-one_section5{
+    padding-top:80px;
+  }
+  .global-scale {
+    height:890px;
+    }
+    /* SECTION 6 */
+    .img-sessions{
+      width: 480px;
+    }
 }
 
 /* TABLET */
@@ -499,6 +642,45 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
+  .background-5 {
+    height:280px;
+  }
+  .container-one_section5{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr)
+  }
+  .img-global{
+    width:700px;
+    transform:translateX(422px) translateY(-40px);
+    opacity: 25%;
+  }
+  .container-two_card{
+    display:grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap:20px;
+  }
+  /* SECTION 6 */
+  .container-general_6{
+    margin-top: 120px;
+  }
+  .column-one,.column-two{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap:20px;
+  }
+  .img-sessions{
+    width: 360px;
+    margin-top: 30px;
+  }
+  .column-one{
+    margin-bottom: 40px
+  }
+  .waiting-for{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-start;
+  }
 }
 
 /* DESKTOP SCREEN */
@@ -507,7 +689,6 @@ body {
     height: 430px; /* Ajusta la altura según tus necesidades */
     transform: skewY(-9deg); /* Inclina el contenedor */
   }
-
   .letter {
     color: white;
     font-weight: bold;
@@ -545,7 +726,7 @@ body {
     opacity: 0.8;
   }
   .img-hero {
-    width: auto;
+    width: 100%;
     height: 600px;
   }
   .sponsors-logo {
@@ -617,29 +798,21 @@ body {
     height: 415px;
     border-radius: 20px;
   }
-
-  .general-container,
-  .unified-section_2,
-  .designed {
-    max-width: 1450px;
-    margin: 0 auto;
-    padding: 0 30px;
-  }
   .background-blue {
     height: 1050px;
     transform: skewY(-10deg) translateY(-20px);
   }
-  .designed{
+  .designed {
     transform: skewY(10deg);
   }
   .section-container_designed,
   .images-container_designed {
     padding: 200px 15px;
   }
-  .worlds-title{
+  .worlds-title {
     font-size: 30px;
   }
-  .start-now3{
+  .start-now3 {
     margin: 60px 0 45px;
   }
   .start-now3:hover {
@@ -711,15 +884,61 @@ body {
     width: 100%;
     height: 45%;
   }
-
+  .global-scale{
+    height:820px;
+    margin-top:60px;
+  }
+  .background-5_2{
+    height:700px;
+  }
+  .startups:hover {
+    cursor: pointer;
+    color: white;
+  }
+  
+  .img-global{
+    width:700px;
+    transform:translateX(600px) translateY(-80px);
+    opacity: 25%;
+  }
+  .container-two_card{
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-top:40px;
+    gap:30px;
+  }
+ /* SECTION 6 */
+ .button-06,.button-06_pricing_api{
+  cursor:pointer;
+ }
+ .button-06:hover{
+  background-color: #0a2540;
+ }
+ .button-06_pricing_api:hover{
+  opacity: 0.8;
+ }
+ .animation-btn6:hover>.arrow-06{
+  transform: translate(7px);
+  transition: transform 0.25s ease;
+ }
+ .img-sessions{
+    width: 450px;
+  }
+  .check{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:flex-start;
+  }
   .general-container,
   .unified-section_2,
   .designed,
-  .why-swipe {
+  .why-swipe,.container-general_5,.container-general_6 {
     max-width: 1450px;
     margin: 0 auto;
     padding: 0 15px;
   }
+ 
 }
 /* PANTALLAS MAS GRANDES */
 @media (min-width: 1365px) {
@@ -727,13 +946,13 @@ body {
     height: 474px; /* Ajusta la altura según tus necesidades */
     transform: skewY(-8deg); /*Inclina el contenedor*/
   }
-  .content-section_payments{
-    width: 50%
+  .content-section_payments {
+    width: 50%;
   }
-  .payments-paragraph{
+  .payments-paragraph {
     margin: 60px 0px;
   }
-  .img-hero{
+  .img-hero {
     margin-left: 200px;
   }
   .purple-font {
@@ -759,12 +978,39 @@ body {
   .images-container_designed {
     padding: 270px 15px 200px;
   }
-  .start-now3{
+  .start-now3 {
     margin: 60px 0 45px;
   }
   .img-code_terminal {
-   
     height: 300px;
+  }
+  .why-swipe{
+    padding-top:80px;
+  }
+  .background-5{
+    height:440px;
+  }
+  .background-5_2 {
+    transform: translateY(-210px);
+  }
+  .global-scale{
+    height:820px;
+    margin-top:100px;
+  }
+  .img-global{
+    width:750px;
+    transform:translateX(755px) translateY(-80px);
+    opacity: 25%;
+  }
+  .container-two_card{
+    margin-top:100px;
+  }
+  /* SECTION 6 */
+  .img-sessions{
+    width: 580px;
+  }
+  .container-general_6{
+    margin-top: 130px;
   }
 }
 /* ANIMATION BACKGROUND */
