--- a/styles2.css
+++ b/styles2.css
@@ -5,7 +5,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 body {
-  height: 10000px;
+  height: 100%;
 }
 /* SECCIÓN 1 */
 /* MOBILE SCREEN */
@@ -302,7 +302,6 @@ body {
   background-color: #0a2540;
   transform: translateY(-190px);
   z-index: -1;
-  /* position: relative; */
   overflow-x: hidden;
 }
 .container-one_section5 {
@@ -410,6 +409,7 @@ border: none;
 /* SECTION 7 */
 .footer-7{
   background-color:#f7f9fc;
+  height:300px;
 }
 .logo-swipe_black{
   padding-top:40px;
